--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
-<!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: PlayHTML</title>
-  </head>
-  <body>
+<!DOCTYPE html
+  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/email">Вёрстка email-рассылок</a>».</p>
+<head>
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta content="telephone=no" name="format-detection" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title></title>
+</head>
 
-    <ul>
-      <li><a href="./1-invitation/">PlayHTML. Приглашение на курс</a></li>
-      <li><a href="./2-welcome/">PlayHTML. Приветственное письмо</a></li>
-      <li><a href="./3-promo/">PlayHTML. Акция</a></li>
-    </ul>
+<body>
 
-  </body>
+  <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a
+      href="https://htmlacademy.ru/intensive/email">Вёрстка email-рассылок</a>».</p>
+
+  <ul>
+    <li><a href="./1-invitation/">PlayHTML. Приглашение на курс</a></li>
+    <li><a href="./2-welcome/">PlayHTML. Приветственное письмо</a></li>
+    <li><a href="./3-promo/">PlayHTML. Акция</a></li>
+  </ul>
+
+</body>
+
 </html>
