added welcome markup

--- a/1-invitation/index.html
+++ b/1-invitation/index.html
@@ -158,7 +158,7 @@
             </tr>
             <tr>
               <td>
-                <img src="./img/Croods Proposal.png" width="278" height="278"
+                <img src="./img/croods_proposal.png" width="278" height="278"
                   alt="Предложение Крудса Картина в духе познего пост-модернизма Надо видеть.">
               </td>
             </tr>
