--- a/2-welcome/index.html
+++ b/2-welcome/index.html
@@ -11,6 +11,363 @@
 </head>
 
 <body>
+  <div>
+    <table class="content-wrapper" width="100%" cellspacing="0" cellpadding="0" border="0">
+      <tr>
+        <td>
+          <!--Логотип-->
+          <table width="100%" cellspacing="0" cellpadding="0" border="0">
+            <tr>
+              <td>
+                <img src="./img/logo.png" width="140" height="24" alt="Логотип">
+              </td>
+            </tr>
+          </table>
+
+          <!--Меню-->
+          <table width="100%" cellspacing="0" cellpadding="0" border="0">
+            <tr>
+              <td>
+                <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                  <tr>
+                    <td>
+                      <p><a href="#" target="blank">Курсы</a></p>
+                    </td>
+                    <td>
+                      <p><a href="#" target="blank">Вебинары</a></p>
+                    </td>
+                    <td>
+                      <p><a href="#" target="blank">О школе</a></p>
+                    </td>
+                  </tr>
+                </table>
+                <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                  <tr>
+                    <td>
+                      <p><a href="#" target="blank">Распродажа</a></p>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+
+          <!--Приветствие-->
+          <table width="100%" cellspacing="0" cellpadding="0" border="0">
+            <tr>
+              <td>
+                <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                  <tr>
+                    <td>
+                      <h2>Здравствуйте, {{name}}</h2>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p>Благодарим вас за регистрацию на курс «Начальный html+css».
+                      </p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p>Курс стартует 1 июля в 17.00
+                        по московскому времени.
+                        Письма
+                        со ссылками для входа в кабинет придут на
+                        указанную почту за день до старта курса.
+                      </p>
+                    </td>
+                  </tr>
+                </table>
+                <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                  <tr>
+                    <td>
+                      <img src="./img/croods_tanding.png" width="175" height="269"
+                        alt="Дизайнер говорит, что это Крудс стоящий">
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+
+          <!--Содержание курса-->
+          <table width="100%" cellspacing="0" cellpadding="0" border="0">
+            <tr>
+              <td>
+                <h2>Что вас ждет
+                  на курсе</h2>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p>Вы будете изучать теорию
+                  и методику на примере учебного проекта, который разработали наши эксперты. А применить полученные
+                  знания на практике вы сможете, выполняя задания по личному проекту.</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p>В этом вам будет помогать наставник - опытный специалист, который проверит домашние задания и
+                  поделится секретами мастерства. А если у вас останутся вопросы, наставник сможет ответить на них
+                  на консультации.</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p>После завершения курса вам нужно будет подготовить свой проект к защите — убедиться,
+                  что он реализован в соответствии
+                  с техническим заданием.</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p>Желаем вам продуктивной работы на интенсиве и успешной защиты. У вас всё получится, мы в вас верим!
+                </p>
+              </td>
+            </tr>
+          </table>
+
+          <!--Ведущие курса-->
+          <table width="100%" cellspacing="0" cellpadding="0" border="0">
+            <tr>
+              <td>
+                <h2>Ведущие курса</h2>
+              </td>
+            </tr>
+          </table>
+          <table width="100%" cellspacing="0" cellpadding="0" border="0">
+            <tr>
+              <td>
+                <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                  <tr>
+                    <td>
+                      <img src="./img/teacher1.png" width="88" height="88" alt="Фото преподавателя">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p><b>Антон Громов</b><br>
+                        Фронтенд-разработчик в Cats Development</p>
+                    </td>
+                  </tr>
+                </table>
+                <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                  <tr>
+                    <td>
+                      <img src="./img/teacher2.png" width="88" height="88" alt="Фото преподавателя">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p><b>Илья Раменский</b><br>
+                        Team Lead в Lizard Software</p>
+                    </td>
+                  </tr>
+                </table>
+                <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                  <tr>
+                    <td>
+                      <img src="./img/teacher3.png" width="88" height="88" alt="Фото преподавателя">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p><b>Игнатий Чубаров</b><br>
+                        Преподаватель IT<br>в РУИТ</p>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <table width="100%" cellspacing="0" cellpadding="0" border="0">
+            <tr>
+              <td>
+                <p>Пока вы ждёте начала курса, вам могут быть интересны вебинары на разные темы, которые проходят на
+                  платформе ежедневно.</p>
+              </td>
+            </tr>
+          </table>
+
+          <!--Другие мероприятия-->
+          <table width="100%" cellspacing="0" cellpadding="0" border="0">
+            <tr>
+              <td>
+                <h2>Другие мероприятия</h2>
+              </td>
+            </tr>
+          </table>
+          <table width="100%" cellspacing="0" cellpadding="0" border="0">
+            <tr>
+              <td>
+                <h3>Тренды frontend-разработки</h2>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p><b>20 июня, 17:00</b></p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p>Самые многообещающие направления развития фронтенда в 2020 году</p>
+              </td>
+            </tr>
+          </table>
+          <table width="100%" cellspacing="0" cellpadding="0" border="0">
+            <tr>
+              <td>
+                <h3>Figma vs Photoshop</h2>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p><b>21 июня, 17:00</b></p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p>Почему давно пора отказаться от последнего?</p>
+              </td>
+            </tr>
+          </table>
+          <table width="100%" cellspacing="0" cellpadding="0" border="0">
+            <tr>
+              <td>
+                <h3>Что такое Git и как его использовать?</h2>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p><b>22 июня, 17:00</b></p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p>Разберем тонкости использования самой популярной системы контроля версий.</p>
+              </td>
+            </tr>
+          </table>
+          <table width="100%" cellspacing="0" cellpadding="0" border="0">
+            <tr>
+              <td>
+                <p><a href="#" target="blank">Все мероприятия</a></p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <img src="./img/Croods.png" width="274" height="290" alt="Дизайнер курит траву. Хорошую траву">
+              </td>
+            </tr>
+          </table>
+
+          <!--Футер-->
+          <table width="100%" cellspacing="0" cellpadding="0" border="0">
+            <table width="100%" cellspacing="0" cellpadding="0" border="0">
+              <tr>
+                <td>
+                  <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                    <tr>
+                      <td>
+                        <h2>Мы в социальных сетях</h2>
+                      </td>
+                    </tr>
+                  </table>
+                  <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                    <tr>
+                      <td>
+                        <a href="#" target="blank">
+                          <img src="./img/facebook.png" width="24" height="24" alt="Иконка Фейсбук">
+                        </a>
+                      </td>
+                      <td>
+                        <a href="#" target="blank">
+                          <img src="./img/inst.png" width="24" height="24" alt="Иконка Инстаграм">
+                        </a>
+                      </td>
+                      <td>
+                        <a href="#" target="blank">
+                          <img src="./img/youtube.png" width="24" height="24" alt="Иконка Ютьюб">
+                        </a>
+                      </td>
+                      <td>
+                        <a href="#" target="blank">
+                          <img src="./img/telegram.png" width="24" height="24" alt="Иконка Телеграм">
+                        </a>
+                      </td>
+                      <td>
+                        <a href="#" target="blank">
+                          <img src="./img/vk.png" width="24" height="24" alt="Иконка Вконтакте">
+                        </a>
+                      </td>
+                    </tr>
+                  </table>
+                  <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                    <tr>
+                      <td>
+                        <h3>Свяжитесь с нами</h3>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <p><a href="mailto:study@htmlacademy.ru">study@htmlacademy.ru</a></p>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <p><a href="tel:88006907668">8-800-690-76-68</a></p>
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+            </table>
+            <table width="100%" cellspacing="0" cellpadding="0" border="0">
+              <tr>
+                <td>
+                  <h3>Полезные ссылки</h3>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <p><a href="#" target="blank">Бесплатные вебинары</a></p>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <p><a href="#" target="blank">Обучающие курсы</a></p>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <p><a href="#" target="blank">Тесты</a></p>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <p><a href="#" target="blank">Наш блог</a></p>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <p><a href="#" target="blank">История студентов</a></p>
+                </td>
+              </tr>
+            </table>
+          </table>
+
+        </td>
+      </tr>
+    </table>
+    <p>Вы получили это письмо, так как являетесь пользователем портала HTMLPlay.
+      Рассылка производится в соответствии с пользовательским соглашением.
+      Если вы не хотите получать рассылку, вы можете <a href="#">отписаться</a> или <a href="#">настроить параметры.</a>
+    </p>
+    <p>Если письмо отображается некорректно или вы хотите им поделиться, <a href="#">жмите сюда</a> .
+    </p>
+
+  </div>
 
 </body>
 
