added promo markup

--- a/1-invitation/index.html
+++ b/1-invitation/index.html
@@ -22,6 +22,7 @@
               </td>
             </tr>
           </table>
+          <!--Лого-->
           <table width="0" cellspasing="0" cellpadding="0" border="0">
             <tr>
               <td>
@@ -29,7 +30,7 @@
               </td>
             </tr>
           </table>
-
+          <!--Затравочка-->
           <table width="100%" cellspacing="0" cellpadding="0" border="0">
             <tr>
               <td>
@@ -43,7 +44,7 @@
               </td>
             </tr>
           </table>
-
+          <!--Дата мероприятия-->
           <table width="100%" cellspacing="0" cellpadding="0" border="0">
             <tr>
               <td>
@@ -73,14 +74,14 @@
                   <tr>
                     <td>
                       <img src="./img/first_image.png" width="352" height="286"
-                        alt="Изображение довольного собой и жизнью студента" />
+                        alt="Изображение довольного собой и жизнью Крудса" />
                     </td>
                   </tr>
                 </table>
               </td>
             </tr>
           </table>
-
+          <!--План вебинара-->
           <table width="100%" cellspacing="0" cellpadding="0" border="0">
             <tr>
               <td>
@@ -133,8 +134,7 @@
               </td>
             </tr>
           </table>
-
-
+          <!--Ведущие-->
           <table width="100%" cellspacing="0" cellpadding="0" border="0">
             <tr>
               <td>
@@ -179,99 +179,98 @@
               </td>
             </tr>
           </table>
-
+          <!--Футер-->
           <table width="100%" cellspacing="0" cellpadding="0" border="0">
-            <table width="100%" cellspacing="0" cellpadding="0" border="0">
-              <tr>
-                <td>
-                  <table width="100%" cellspacing="0" cellpadding="0" border="0">
-                    <tr>
-                      <td>
-                        <h2>Мы в социальных сетях</h2>
-                      </td>
-                    </tr>
-                  </table>
-                  <table width="100%" cellspacing="0" cellpadding="0" border="0">
-                    <tr>
-                      <td>
-                        <a href="#" target="blank">
-                          <img src="./img/facebook.png" width="24" height="24" alt="Иконка Фейсбук">
-                        </a>
-                      </td>
-                      <td>
-                        <a href="#" target="blank">
-                          <img src="./img/inst.png" width="24" height="24" alt="Иконка Инстаграм">
-                        </a>
-                      </td>
-                      <td>
-                        <a href="#" target="blank">
-                          <img src="./img/youtube.png" width="24" height="24" alt="Иконка Ютьюб">
-                        </a>
-                      </td>
-                      <td>
-                        <a href="#" target="blank">
-                          <img src="./img/telegram.png" width="24" height="24" alt="Иконка Телеграм">
-                        </a>
-                      </td>
-                      <td>
-                        <a href="#" target="blank">
-                          <img src="./img/vk.png" width="24" height="24" alt="Иконка Вконтакте">
-                        </a>
-                      </td>
-                    </tr>
-                  </table>
-                  <table width="100%" cellspacing="0" cellpadding="0" border="0">
-                    <tr>
-                      <td>
-                        <h2>Свяжитесь с нами</h2>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <p><a href="mailto:study@htmlacademy.ru">study@htmlacademy.ru</a></p>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <p><a href="tel:88006907668">8-800-690-76-68</a></p>
-                      </td>
-                    </tr>
-                  </table>
-                </td>
-              </tr>
-            </table>
-            <table width="100%" cellspacing="0" cellpadding="0" border="0">
-              <tr>
-                <td>
-                  <h2>Полезные ссылки</h2>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <p><a href="#" target="blank">Бесплатные вебинары</a></p>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <p><a href="#" target="blank">Обучающие курсы</a></p>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <p><a href="#" target="blank">Тесты</a></p>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <p><a href="#" target="blank">Наш блог</a></p>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <p><a href="#" target="blank">История студентов</a></p>
-                </td>
-              </tr>
-            </table>
+            <tr>
+              <td>
+                <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                  <tr>
+                    <td>
+                      <h2>Мы в социальных сетях</h2>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                        <tr>
+                          <td>
+                            <a href="#" target="blank">
+                              <img src="./img/facebook.png" width="24" height="24" alt="Иконка фейсбук">
+                            </a>
+                          </td>
+                          <td>
+                            <a href="#" target="blank">
+                              <img src="./img/inst.png" width="24" height="24" alt="Иконка инстаграм">
+                            </a>
+                          </td>
+                          <td>
+                            <a href="#" target="blank">
+                              <img src="./img/youtube.png" width="24" height="24" alt="Иконка ютьюб">
+                            </a>
+                          </td>
+                          <td>
+                            <a href="#" target="blank">
+                              <img src="./img/telegram.png" width="24" height="24" alt="Иконка телеграм">
+                          </td>
+                          <td>
+                            <a href="#" target="blank">
+                              <img src="./img/vk.png" width="24" height="24" alt="Иконка в контакте        ">
+                            </a>
+                          </td>
+                        </tr>
+                      </table>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p><b>Свяжитесь с нами</b></p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p><a href="mailto:study@htmlacademy.ru">study@htmlacademy.ru</a></p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p><a href="tel:88006907668">8-800-690-76-68</a></p>
+                    </td>
+                  </tr>
+                </table>
+                <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                  <tr>
+                    <td>
+                      <h3>Полезные ссылки</h3>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p><a href="#" target="blank">Бесплатные вебинары</a></p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p><a href="#" target="blank">Обучающие курсы</a></p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p><a href="#" target="blank">Тесты</a></p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p><a href="#" target="blank">Наш блог</a></p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p><a href="#" target="blank">История студентов</a></p>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
           </table>
 
         </td>
