added style text promo

--- a/2-welcome/index.html
+++ b/2-welcome/index.html
@@ -758,7 +758,7 @@
                               пользователем портала
                               HTMLPlay.
                               Рассылка производится в соответствии с пользовательским соглашением.
-                              Если вы не хотите получать рассылку, вы можете <a href="#" target="blank"
+                              Если вы не хотите получать рассылку,<br>вы можете <a href="#" target="blank"
                                 style="font-size: 11px;line-height: 13px; color:#828282;">отписаться</a>
                               или <a href="#" target="blank"
                                 style="font-size: 11px;line-height: 13px; color:#828282;">настроить
